--- a/myf/package.json
+++ b/myf/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cache-loader": "^4.1.0",
     "core-js": "^3.6.4",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-loader": "^15.9.1",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
