--- a/myf/package.json
+++ b/myf/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.9.0",
     "cache-loader": "^4.1.0",
     "core-js": "^3.6.4",
     "jquery": "^3.4.1",
