--- a/myf/package.json
+++ b/myf/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.1",
     "vue-momentjs": "^0.1.2",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
