--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "expose-loader": "^0.7.5",
     "node-sass": "^4.13.1",
+    "prettier": "^2.0.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
