--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "vue-loader": "^15.9.1",
     "vue-momentjs": "^0.1.2",
     "vue-router": "^3.1.6",
-    "vue-session": "^1.0.0"
+    "vue-session": "^1.0.0",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
