--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-vue": "^6.2.2",
     "expose-loader": "^0.7.5",
     "node-sass": "^4.14.0",
     "prettier": "^2.0.5",
