--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/vue": "^4.4.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.0",
