--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "@tensorflow/tfjs-node": "^1.7.4",
     "axios": "^0.19.2",
     "bcrypt-nodejs": "0.0.3",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -16,6 +17,7 @@
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pug": "2.0.0-beta11",
     "vue-router": "^3.1.6"
