--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.10.5",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
