--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pm2": "^4.4.1",
     "pug": "2.0.0-beta11",
     "vue-router": "^3.1.6"
