--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "express": "~4.16.1",
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
+    "googleapis": "^60.0.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.10.5",
+    "mongoose": "^5.10.7",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
@@ -23,6 +24,6 @@
     "passport-google-oauth20": "^2.0.0",
     "pm2": "^4.4.1",
     "pug": "2.0.0-beta11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.4.5"
   }
 }
