--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
+    "google-auth-library": "^6.1.0",
     "googleapis": "^60.0.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.10.7",
