--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-mysql-session": "^2.1.4",
